[package]
name = "levare_t"
version = "0.1.0"
edition = "2021"

[dependencies]
odbc-api = "0.57.0"
anyhow = "1.0.71"
csv = "1.2.1"
xml-rs = "0.8.13"
rust_decimal = "1.29"


[dependencies.tokio-util]
version = "0.6"
features = ["compat"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

